# hello-bot

./: .bandit  .coverage  .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_IMPROVEMENTS.md  DEPLOYMENT_OPTIMIZATION.md  DOCKER_BUILD_FIX.md  Dockerfile  Dockerfile.dev  FORK.md  GITHUB_SECRETS.md  GOAL.md  Makefile  NEXT.md  README.md  README_minimal_backup.md  ROADMAP.md  ROAD_TO_GOAL.md  ROAD_TO_GOAL_CLAUDE.md  ROAD_TO_GOAL_CURSOR.md  SIMPLE.md  SIMPLE_PROD.md  SIMPLIFICATION_SUMMARY.md  START_HELLO_AI_BOT.md  TEMPLATE_README.md  TEMPLATE_SETUP.md  TODO.md  UI_IMPRUVMENT.md  VPS_DB_UPDATE.md  alembic.ini  docker-compose.dev.yml  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  (+1 more)
.github/: README.md  template.yml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20241222_1700_001_create_users_table.py
app/: __init__.py  cache.py  config.py  container.py  database.py  handlers.py  logging.py  main.py  metrics.py  middleware.py  webhook.py
app/database/: __init__.py  base.py  session.py
app/database/models/: __init__.py  user.py
app/handlers/: __init__.py  common.py  start.py
app/middlewares/: __init__.py  database.py
app/services/: __init__.py  base.py  user.py
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_SECRETS.md  LOCAL_DEVELOPMENT.md  QUICK_START.md  README.md  TECHNOLOGIES.md  TEMPLATE_USAGE.md
prompts/: README.md  START.md  add_feature.md  analyze_file.md  simplify_code.md
scripts/: README.md  check_vps_simple.sh  deploy.sh  deploy_production.sh  deploy_simple.sh  deploy_to_vps.sh  dev_run.py  init_db.sql  manage_postgres.sh  postgresql.conf  setup-template.sh  setup_vps.sh  start_dev.sh  start_dev_simple.sh  stop_dev.sh  test_local.sh  test_log_vps.sh  test_vps.sh
tests/: __init__.py  conftest.py  test_handlers.py  test_services.py  test_webhook.py
