[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-bot"
version = "0.1.0"
description = "Minimal Telegram bot for deployment testing"
requires-python = ">=3.11"

dependencies = [
    # Core bot framework
    "aiogram>=3.0.0",
    
    # Configuration management
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Database (async PostgreSQL)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Performance optimizations for 2GB RAM
    "uvloop>=0.19.0; sys_platform != 'win32'",  # Faster async event loop
]

[dependency-groups]
dev = [
    # Code quality
    "ruff>=0.12.4",
    
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    
    # Development tools
    "ipython>=8.0.0",
    "watchfiles>=0.22.0",  # File watching for hot reloading
]

prod = [
    # Production monitoring (optional)
    "psutil>=5.9.0",  # System monitoring
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "C4"]
ignore = ["E501", "B008"]  # Line too long, function call in argument defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]