[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-bot"
version = "0.3.0"
description = "Minimal Telegram bot for deployment testing"
requires-python = ">=3.12"

dependencies = [
    # Core bot framework
    "aiogram>=3.0.0",
    
    # Configuration management
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Database (async PostgreSQL)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Web server for webhooks
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Structured logging
    "structlog>=23.2.0",
    
    # Performance optimizations for 2GB RAM
    "uvloop>=0.19.0; sys_platform != 'win32'",  # Faster async event loop
    
    # Monitoring and metrics
    "prometheus-client>=0.19.0",  # Metrics collection
    
    # Security and performance middleware
    "slowapi>=0.1.9",  # Rate limiting
    
    # Redis for caching (optional)
    "redis>=5.0.0",
    "hiredis>=2.0.0",  # Faster redis client
]

[dependency-groups]
dev = [
    # Code quality
    "ruff>=0.12.4",
    
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",  # For testing FastAPI
    "pytest-mock>=3.12.0",  # For mocking
    "aiosqlite>=0.19.0",  # SQLite async driver for tests
    
    # Development tools
    "ipython>=8.0.0",
    "watchfiles>=0.22.0",  # File watching for hot reloading
]

prod = [
    # Production monitoring (optional)
    "psutil>=5.9.0",  # System monitoring
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "C4"]
ignore = ["E501", "B008"]  # Line too long, function call in argument defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]